--- a/peaches.tex
+++ b/peaches.tex
@@ -50,7 +50,7 @@
 \newcommand{\msunyr}{\mbox{M$_\odot$ yr$^{-1}$}}
 \newcommand{\kms}{\mbox{\,km\,s$^{-1}$}}
 \newcommand{\mhz}{\mbox{\,MHz}}
-\newcommand{\kkms}{\mbox{K\,km\,s$^{-1}$}}
+\newcommand{\kkms}{\mbox{\,K\,km\,s$^{-1}$}}
 \newcommand{\lsmm}{\mbox{$L_{\rm smm}$}}
 \newcommand{\lbol}{\mbox{$L_{\rm bol}$}}
 \newcommand{\tbol}{\mbox{$T_{\rm bol}$}}
@@ -71,6 +71,7 @@
 \newcommand{\Kc}{\mbox{$K_\text{c}$}}
 \newcommand{\vlsr}{\mbox{$v_\text{lsr}$}}
 \newcommand{\rt}{\mbox{$\rightarrow$}}
+\newcommand{\unc}[2]{\mbox{$^{+#1}_{-#2}$}}
 
 % molecule shortcut
 \newcommand{\htcn}{\mbox{H$^{13}$CN}}
@@ -120,8 +121,12 @@
 \title{The Complex Organic Molecules of Embedded Protostars at Perseus}
 
 \author{Yao-Lun Yang}
-\affiliation{RIKEN Cluster for Pioneering Research, Wako-shi, Saitama, 351-0106, Japan}
 \affiliation{Department of Astronomy, University of Virginia, Charlottesvile, VA 22904-4235, USA}
+\affiliation{RIKEN Cluster for Pioneering Research, Wako-shi, Saitama, 351-0106, Japan}
+\author{Nami Sakai}
+\affiliation{RIKEN Cluster for Pioneering Research, Wako-shi, Saitama, 351-0106, Japan}
+\author{Yichen Zhang}
+\affiliation{RIKEN Cluster for Pioneering Research, Wako-shi, Saitama, 351-0106, Japan}
 
 \correspondingauthor{Yao-Lun Yang}
 \email{yaolunyang.astro@gmail.com}
@@ -151,7 +156,7 @@ The Perseus ALMA Chemistry Survey (PEACHES) aims to provide the statistics on th
 
 \section{Observations}
 % Observation details
-
+Set3 has the continuum window ranging from 245800\mhz\ to 246730\mhz, while the Set1 and Set1 have the continuum window ranging from 246200\mhz\ to 247130\mhz.
 % imaging parameters
 
 % a map of PEACHES sources
@@ -202,6 +207,8 @@ The uncertainty from the fitting.
 \section{Detection Statistics}
 We summarize the fraction of sources with detections of molecules in Figure\,\ref{fig:stats}.  The detection statistics include COMs, carbon-chain molecules, and the simple organic molecules, such as CS, \htcn, SO, $^{34}$SO, and SO$_{2}$.  The PEACHES protostars show a great chemical diversity from no molecule detected (\textcolor{red}{B1-bN}) to rich spectra of COMs (e.g. Per-emb-12B).  Detections of COMs and the number of COMs detected show no obvious correlation with the bolometric luminosity and bolometric temperature of the protostars, which are conventional evolutionary indicators.  Low luminosity sources have fewer COMs detected; however, if COMs mostly come from thermally desorption, the region with $T > T_\text{desorption}$ may be smaller for the low luminosity sources, making the emission of COMs fainter and reducing our sensitivity to detect COMs.  We also compare the detection statistics with the mass derived from 9\,mm observations that resolved the sources as a proxy of the central mass \citep{2018ApJS..238...19T}.  The detection statistics show no clear correlation with the central mass; however, the sources with smaller central mass have fewer detections of COMs, \textcolor{red}{which may due to their low luminosity.}  
 
+Several sources have their SiO emission with a broad line width, significantly contaminating the emission of \ethylcyanide\ and \acetaldehyde.  In the later quantitative discussion, we exclude the spectral windows contaminated by the SiO emission.  For assigning the detections, we can distinguish the emission of \ethylcyanide\ and \acetaldehyde\ from the broad SiO emission in a few sources, such as \acetaldehyde\ in Per-emb 26.
+
 \begin{figure*}[htbp!]
   \centering
   \includegraphics[width=\textwidth]{stats_sorted_by_lbol.pdf}
@@ -223,140 +230,12 @@ We summarize the fraction of sources with detections of molecules in Figure\,\re
 \end{figure*}
 \renewcommand{\thefigure}{\arabic{figure}}
 
-\section{Excitation Temperatures}
-\subsection{\methanol}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set1_ID01_2.pdf}
-  \includegraphics[width=0.47\textwidth]{Set1_ID01_2_rot_temps.pdf}
-  \caption{The methanol rotational diagram for L1448 IRS3A and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set1_ID02.pdf}
-  \includegraphics[width=0.47\textwidth]{Set1_ID02_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 26 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set1_ID03.pdf}
-  \includegraphics[width=0.47\textwidth]{Set1_ID03_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 22A and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set1_ID03_2.pdf}
-  \includegraphics[width=0.47\textwidth]{Set1_ID03_2_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 22B and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set1_ID06.pdf}
-  \includegraphics[width=0.47\textwidth]{Set1_ID06_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 17 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set2_ID00.pdf}
-  \includegraphics[width=0.47\textwidth]{Set2_ID00_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 44 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set2_ID01_2.pdf}
-  \includegraphics[width=0.47\textwidth]{Set2_ID01_2_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 12B and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set2_ID02.pdf}
-  \includegraphics[width=0.47\textwidth]{Set2_ID02_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 13 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set2_ID03.pdf}
-  \includegraphics[width=0.47\textwidth]{Set2_ID03_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 27 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set2_ID05.pdf}
-  \includegraphics[width=0.47\textwidth]{Set2_ID05_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 21 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set2_ID07.pdf}
-  \includegraphics[width=0.47\textwidth]{Set2_ID07_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 35A and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set2_ID12.pdf}
-  \includegraphics[width=0.47\textwidth]{Set2_ID12_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 18 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set1_ID01_2.pdf}
-  \includegraphics[width=0.47\textwidth]{Set1_ID01_2_rot_temps.pdf}
-  \caption{The methanol rotational diagram for L1448 IRS3A and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set3_ID00.pdf}
-  \includegraphics[width=0.47\textwidth]{Set3_ID00_rot_temps.pdf}
-  \caption{The methanol rotational diagram for B1-bS and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\begin{figure*}[htbp!]
-  \centering
-  \includegraphics[width=0.47\textwidth]{Set3_ID01.pdf}
-  \includegraphics[width=0.47\textwidth]{Set3_ID01_rot_temps.pdf}
-  \caption{The methanol rotational diagram for Per-emb 29 and the fitted excitation temperature distribution using the bootstraping method.}
-  \label{}
-\end{figure*}
-
-\subsection{\methylformate}
-
-\section{The Spectra of CCH}
-Due to the absorption and irregular line profile, the \textsc{xclass} fitting routine often fails to faithfully reproduce the observed CCH spectra.
-
 \section{Correlations of COMs}
 The chemical evolution of protostars may leave certain patterns in the abundance of molecules as the dynamical evolution determines the density and temperature structures, regulating chemical reactions.  Thus, the abundance of COMs and their correlations provide critical information to constrain the chemical evolution at embedded protostars.  The fitted column density of COMs indicates the abundance of COMs around protostars.  Typically COMs are locked into the ices on dust grains at outer envelope. Therefore, we take the column density of COMs as a proxy of the abundance of COMs.  
 
 As described in Section\,\ref{sec:modeling}, we fit the column density and line width with different excitation temperatures, resulting in a range of column density as its uncertainty.  The comparison between CCH and \methanol\ shows no correlation between these two molecules (Figure\,\ref{fig:cch_ch3oh}), similar to the conclusion in \citet{2018ApJS..236...52H}.  The single dish survey by \citet{2016ApJ...833..125G} shows a correlation between C$_{4}$H, a more complex carbon-chain molecules, and \methanol.  Outflow activity can promote the formation of CCH, which is more efficiency at warm temperature.  In face, the morphology of CCH often traces the outflow cavities seen from CS.  Therefore, the lack of correlation between CCH and \methanol\ may be affected by outflows.
 
-Figure\,\ref{fig:corner} shows the correlations of several COMs selected from their detection rates.  The column density of \methanol\ best correlates with that of \methylcyanide.  \citet{2020A&A...635A.198B} also found the tight correlation between these two molecules.  The column densities of \dimethylether\ and \methylformate\ also show a tight correlation.  To quantify the goodness of correlation, we calculate the Pearson's correlation coefficient ($r$), which tests the linearity of two variables.  A simple calculation of the Pearson's correlation coefficient would ignore the uncertainties of the column density as well as the upper limits.  Thus, we use the bootstrapping method to sample the fitted column densities and upper limits to calculate Pearson's $r$.  For detections, we assume a normal distribution centers on the best-fitted values with the uncertainty as the width of the normal distribution; for non-detections, we assume a normal distribution centers at zero with a width of one third of the upper limit, which is the 3$\sigma$ upper limit.  Figure\,\ref{fig:pearson_distribution} shows the distributions of the Pearson's $r$ for the correlation between \methanol\ and \methylformate\ after 10000 resampling for all derived column densities (detections \&\ non-detections) and the detection-only sample.  With the detection-only sample, the mean Pearson's $r_{d}$ is 0.92, as expected for a tight correlation, with a Gaussian-like distribution skewed toward lower values.  After including the upper limits, the mean Pearson's $r$ decreases to 0.65 with larger uncertainty (the 95\%\ credible interval increases by 76\%).  If we take $r \geq 0.5$ and $r_{d} \geq 0.9$ as the criteria for having correlations, \textcolor{red}{(to be updated after updating the figure).}  
+Figure\,\ref{fig:corner} shows the correlations of several COMs selected from their detection rates.  The column density of \methanol\ best correlates with that of \methylcyanide.  \citet{2020A&A...635A.198B} also found the tight correlation between these two molecules from the CALYPSO survey, which has a selective sample.  The column densities of \dimethylether\ and \methylformate\ also show a tight correlation.  To quantify the goodness of correlation, we calculate the Pearson's correlation coefficient ($r$), which tests the linearity of two variables.  A simple calculation of the Pearson's correlation coefficient would ignore the uncertainties of the column density.  Thus, we use the bootstrapping method to sample the fitted column densities to calculate Pearson's $r$, by assuming a normal distribution centers on the best-fitted values with the uncertainty as the width of the normal distribution.  If we include the upper limits as normal distributions center on zero, the correlation coefficient becomes significantly lower due to the cluster of samples around zero column density (Figure\,\ref{fig:pearson_distribution}).  With the detection-only sample, the mean Pearson's $r_{d}$ is 0.91, as expected for a tight correlation, with a Gaussian-like distribution skewed toward lower values.  After including the upper limits, the mean Pearson's $r$ decreases to 0.59 with larger uncertainty (the 68\%\ credible interval increases by 160\%).  Thus, the bootstrapped correlation coefficient only considers the detections.
 
 \begin{figure}[htbp!]
   \centering
@@ -379,6 +258,32 @@ Figure\,\ref{fig:corner} shows the correlations of several COMs selected from th
   \label{fig:corner}
 \end{figure*}
 
+\renewcommand{\thefigure}{\arabic{figure} (Cont.)}
+\addtocounter{figure}{-1}
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=\textwidth]{corner_Ncol_correlations_norm_Tcont.pdf}
+  \caption{Corner plot of the correlations of the column densities normalized by the continuum brightness temperatures.}
+  \label{fig:corner_tcont}
+\end{figure*}
+
+\addtocounter{figure}{-1}
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=\textwidth]{corner_Ncol_correlations_norm_Lbol.pdf}
+  \caption{Corner plot of the correlations of the column densities normalized by the bolometric luminosities.  A few close multiple sources, including Per-emb 12 A \&\ B, Per-emb 35 A \&\ B, and Per-emb 11 A \&\ C, are excluded due to their poorly determined SEDs.}
+  \label{fig:corner_lbol}
+\end{figure*}
+
+\addtocounter{figure}{-1}
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=\textwidth]{corner_Ncol_correlations_norm_Tbol.pdf}
+  \caption{Corner plot of the correlations of the column densities are normalized by the bolometric temperatures.  A few close multiple sources, including Per-emb 12 A \&\ B, Per-emb 35 A \&\ B, and Per-emb 11 A \&\ C, are excluded due to their poorly determined SEDs.}
+  \label{fig:corner_tbol}
+\end{figure*}
+\renewcommand{\thefigure}{\arabic{figure}}
+
 \begin{figure*}[htbp!]
   \centering
   \includegraphics[width=\textwidth]{corner_Ncol_correlations_minor.pdf}
@@ -386,50 +291,87 @@ Figure\,\ref{fig:corner} shows the correlations of several COMs selected from th
   \label{fig:corner_minor}
 \end{figure*}
 
+\subsection{Excitation Temperatures}
+\subsubsection{\methanol}
+The PEACHES spectra cover four methanol lines, while the spectra of each source include three of them due to the frequency shift in the wide spectral window.  The three methanol lines have upper energy ranging from $\sim$50\,K to $\sim$500\,K, which allows us to estimate the rotational temperature of methanol if all three lines are detected.  To construct the methanol rotational diagram, we fit the methanol emission with a Gaussian profile and bootstrap the measurements for fitting the rotational temperature.  Figure\,\ref{fig:rot_dia_example} shows the rotational diagram of Per-emb 22 B along with the sampled rotational temperature.  The derived rotational temperature of methanol ranges from 120\,K to 240\,K with an exception of Per-emb 18, which has a rotational temperature of 395.7\,K for methanol (Table\,\ref{tbl:methanol_rot_temps}).
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set1_ID03_2.pdf}
+  \includegraphics[width=0.47\textwidth]{Set1_ID03_2_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 22B and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{fig:rot_dia_example}
+\end{figure*}
+
+\begin{deluxetable}{cc}
+  \tabletypesize{\scriptsize}
+  \tablecaption{Rotational Temperatures of Methanol \label{tbl:methanol_rot_temps}}
+  \tablewidth{\textwidth}
+  \tablehead{\colhead{Source} & \colhead{$T_\text{rot}$}}
+  \startdata
+  Per-emb 26   & 120.1\unc{2.6}{2.5} K   \\
+  Per-emb 22 A & 182.4\unc{11.2}{11.4} K \\
+  Per-emb 22 B & 157.5\unc{13.4}{13.0} K \\
+  Per-emb 17   & 173.9\unc{1.8}{1.9} K   \\
+  Per-emb 44   & 197.5\unc{0.3}{0.3} K   \\
+  Per-emb 12 B & 194.0\unc{0.8}{0.8} K   \\
+  Per-emb 13   & 208.6\unc{3.9}{4.0} K   \\
+  Per-emb 27   & 195.8\unc{0.4}{0.4} K   \\
+  Per-emb 21   & 151.0\unc{14.6}{15.6} K \\
+  Per-emb 35 A & 145.1\unc{3.7}{3.7} K   \\
+  Per-emb 18   & 395.7\unc{30.7}{30.4} K \\
+  B1-bS        & 241.7\unc{11.7}{11.9} K \\
+  Per-emb 29   & 227.7\unc{3.2}{3.3} K   \\
+  \enddata
+\end{deluxetable}
+
+% \subsubsection{\methylformate}
+
 \section{Spatial Extent of COMs}
 \section{Discussion}
 \subsection{Notes on the 1D Spectra}
-\paragraph{L1448 IRS 3A}
-\begin{itemize}
-  \item The emission of SO and CS shows additional red-shifted component, separated by $\sim$4.6\kms.
-\end{itemize}
+% \paragraph{L1448 IRS 3A}
+% \begin{itemize}
+%   \item The emission of SO and CS shows additional red-shifted component, separated by $\sim$4.6\kms.
+% \end{itemize}
 
-\paragraph{Per-emb-33-A}
-\begin{itemize}
-  \item Strong absorption at 246509\mhz.
-  \item HDCO seems to have two components for the transition at 246925\mhz, but the one at 259035\mhz\ only has one component, which is underestimated by the model.
-\end{itemize}
+% \paragraph{Per-emb-33-A}
+% \begin{itemize}
+%   \item Strong absorption at 246509\mhz.
+%   \item HDCO seems to have two components for the transition at 246925\mhz, but the one at 259035\mhz\ only has one component, which is underestimated by the model.
+% \end{itemize}
 
-\paragraph{Per-emb-33-B/C}
-\begin{itemize}
-  \item CCH shows three components leading to an inaccurate fit.
-\end{itemize}
+% \paragraph{Per-emb-33-B/C}
+% \begin{itemize}
+%   \item CCH shows three components leading to an inaccurate fit.
+% \end{itemize}
 
-\paragraph{Per-emb-42}
-\begin{itemize}
-  \item Double-peaked CS line
-  \item Triple-peaked CCH line
-\end{itemize}
+% \paragraph{Per-emb-42}
+% \begin{itemize}
+%   \item Double-peaked CS line
+%   \item Triple-peaked CCH line
+% \end{itemize}
 
 \paragraph{Per-emb-26}
 \begin{itemize}
-  \item Red-shifted excess appears in the CS, SO, \methanol, \htcn, and HDCO lines.
-  \item Broad SO lines peak at slightly blue-shifted velocity ($\sim$1\kms).
-  \item The best-fitting model overestimates the \ethylcyanide, \acetaldehyde, and \cctht\ lines, possibly due to the contamination of SiO, which should have been excluded for fitting.  Tests are running now.
-  \item The secondary \methanol\ line becomes overestimated at $T_\text{ex} \geq $200 K.
+  % \item Red-shifted excess appears in the CS, SO, \methanol, \htcn, and HDCO lines.
+  \item Red-shifted excess appears in the \methanol\ lines.
+  % \item Broad SO lines peak at slightly blue-shifted velocity ($\sim$1\kms).
+  % \item The best-fitting model overestimates the \ethylcyanide, \acetaldehyde, and \cctht\ lines, possibly due to the contamination of SiO, which should have been excluded for fitting.  Tests are running now.
+  % \item The secondary \methanol\ line becomes overestimated at $T_\text{ex} \geq $200 K.
   \item Unidentified lines at 246525\mhz\ and 244249\mhz.
 \end{itemize}
 
-\paragraph{Per-emb-22-B}
-\begin{itemize}
-  \item The SO lines have small red-shifted excess.  The best-fitting line strength decreases significantly at $T_\text{ex} = $200 K.  Not sure why.
-  \item The SO line profiles are slightly skewed toward blue-shifted velocity, while the CS line shows another brighter peak at blue-shifted velocity.
-\end{itemize}
+% \paragraph{Per-emb-22-B}
+% \begin{itemize}
+%   \item The SO lines have small red-shifted excess.  The best-fitting line strength decreases significantly at $T_\text{ex} = $200 K.  Not sure why.
+%   \item The SO line profiles are slightly skewed toward blue-shifted velocity, while the CS line shows another brighter peak at blue-shifted velocity.
+% \end{itemize}
 
-\paragraph{Per-emb-22-A}
-\begin{itemize}
-  \item Hints of \methylformate emission, but not significant enough to warrant a detection.
-\end{itemize}
+% \paragraph{Per-emb-22-A}
+% \begin{itemize}
+%   \item Hints of \methylformate emission, but not significant enough to warrant a detection.
+% \end{itemize}
 
 \paragraph{Per-emb-17}
 \begin{itemize}
@@ -437,16 +379,16 @@ Figure\,\ref{fig:corner} shows the correlations of several COMs selected from th
   \item The \methylformate\ line at $\sim$259343\mhz\ may be optically thick.
 \end{itemize}
 
-\paragraph{Per-emb-20}
-\begin{itemize}
-  \item The CCH lines have a narrow double-peaked profile.  The CS line shows a similar double-peak profile.
-  \item The SO lines have a broad component underneath the typical narrow lines.
-\end{itemize}
+% \paragraph{Per-emb-20}
+% \begin{itemize}
+%   \item The CCH lines have a narrow double-peaked profile.  The CS line shows a similar double-peak profile.
+%   \item The SO lines have a broad component underneath the typical narrow lines.
+% \end{itemize}
 
 \paragraph{SVS13 A2}
 \begin{itemize}
   \item Weak indication of the unidentified line at 246525\mhz, which has been detected in other sources.
-  \item The model strength of CCH suddenly decreases at $T_\text{ex} = $200 K by $\sim$0.5 K over a 2 K line.
+  % \item The model strength of CCH suddenly decreases at $T_\text{ex} = $200 K by $\sim$0.5 K over a 2 K line.
 \end{itemize}
 
 \paragraph{Per-emb-44}
@@ -475,37 +417,37 @@ Figure\,\ref{fig:corner} shows the correlations of several COMs selected from th
   \item The \methylformate\ emission needs $T_\text{ex} > $100 K to have a good fit.
   \item All three \methanol\ lines are detected but two of them show clear sign of self-absorption, therefore, not ideal for fitting the excitation temperature.
   \item Unidentified lines at 244248\mhz, 246254\mhz, 246331\mhz, 246344\mhz, 246434\mhz, 246525\mhz, 246838\mhz, 246974\mhz, 247086\mhz, 257268\mhz, 257271\mhz, 259323\mhz, 259331\mhz, 262098\mhz, and 262109\mhz.
-  \item The best-fitting models have two different widths for the \acetaldehyde\ lines.  
-  \item The best-fitting model for \tmethanol\ lines overestimates the line width. 
+  % \item The best-fitting models have two different widths for the \acetaldehyde\ lines.  
+  \item The best-fitting model for \tmethanol\ lines overestimates the line width due to the weak and broad line at 247086\mhz.
 \end{itemize}
 
 \paragraph{Per-emb-27}
 \begin{itemize}
-  \item All three \methanol\ lines are detected, but none of the temperature produce a good fit to all three lines, suggesting that some lines are optically thick.  The transitions at 243916\mhz\ and 261806\mhz\ are $\sim$30 K, while the transition at 246873\mhz\ is about 24 K.  They seems to be optically thick.  In comparison, the continuum brightness temperature is only 5.8 K.
+  \item All three \methanol\ lines are detected, but none of the temperature produce a good fit to all three lines, suggesting that some lines are optically thick.  The intensities of the transitions at 243916\mhz\ and 261806\mhz\ are $\sim$30 K, while the intensity at 246873\mhz\ is about 24 K.  They seems to be optically thick.  In comparison, the continuum brightness temperature is only 5.8 K.
   \item Unidentified lines at 244232\mhz, 244248\mhz, 246207\mhz, 246254\mhz, 246388\mhz, 246435\mhz, 246525\mhz, 246538\mhz, 246838\mhz, 246973\mhz, 247084\mhz, and 259330\mhz.
   \item The \methanol\ line at 243916\mhz\ and the SO lines become optically thick at 100 K.
 \end{itemize}
 
-\paragraph{Per-emb-54}
-\begin{itemize}
-  \item The SO lines appears red-shifted by $\sim$2\kms.
-  \item The emission of CS and CCH shows a blue-shifted peak along with absorption slightly red-shifted compared to the source velocity.
-\end{itemize}
+% \paragraph{Per-emb-54}
+% \begin{itemize}
+%   \item The SO lines appears red-shifted by $\sim$2\kms.
+%   \item The emission of CS and CCH shows a blue-shifted peak along with absorption slightly red-shifted compared to the source velocity.
+% \end{itemize}
 
 \paragraph{Per-emb-21}
 \begin{itemize}
-  \item Emission of \methanol\ is detected.  However, the broad widht and noisy spectra lead to a bad fit.  The best-fitting model has the maximum line width allowed, 3.5\kms.
+  \item Emission of \methanol\ is detected.  However, the broad width and noisy spectra lead to a bad fit.  The best-fitting model has the maximum line width allowed, 3.5\kms.
 \end{itemize}
 
-\paragraph{Per-emb-14}
-\begin{itemize}
-  \item The best-fitting model underestimates the HDCO lines, possibly due to the simultaneously fitted \tmethanol\ lines.
-\end{itemize}
+% \paragraph{Per-emb-14}
+% \begin{itemize}
+%   \item The best-fitting model underestimates the HDCO lines, possibly due to the simultaneously fitted \tmethanol\ lines.
+% \end{itemize}
 
 \paragraph{Per-emb-35-B}
 \begin{itemize}
-  \item The best-fitting model underestimates the SO lines at $T_\text{ex} = $100 K.
-  \item The CCH lines show a double-peaked line profile.
+  % \item The best-fitting model underestimates the SO lines at $T_\text{ex} = $100 K.
+  % \item The CCH lines show a double-peaked line profile.
   \item The \methanol\ line at 243915\mhz has an S/N of 1.2, but hints the existence of \methanol.
 \end{itemize}
 
@@ -515,37 +457,37 @@ Figure\,\ref{fig:corner} shows the correlations of several COMs selected from th
   \item The \methylformate\ line at 259342\mhz\ has an S/N of 1.8, but hint the existence of \methylformate.
 \end{itemize}
 
-\paragraph{SVS13B}
-\begin{itemize}
-  \item The fitted width of the HDCO lines is overestimated.
-\end{itemize}
+% \paragraph{SVS13B}
+% \begin{itemize}
+%   \item The fitted width of the HDCO lines is overestimated.
+% \end{itemize}
 
 \paragraph{Per-emb-15}
 \begin{itemize}
   \item All lines have only the blue-shifted emission, making them blue-asymmetric.
 \end{itemize}
 
-\paragraph{Per-emb-50}
-\begin{itemize}
-  \item The SO and SO$_{2}$ lines have a very broad component ($\Delta \nu = $6\kms), skewing toward the blue-shifted velocity.
-\end{itemize}
+% \paragraph{Per-emb-50}
+% \begin{itemize}
+%   \item The SO and SO$_{2}$ lines have a very broad component ($\Delta \nu = $6\kms), skewing toward the blue-shifted velocity.
+% \end{itemize}
 
 \paragraph{Per-emb-18}
 \begin{itemize}
   \item Many transitions of \methylformate\ are tentatively detected; however, none of them has S/N $>$ 3.  Currently categorized as non-detection.
-  \item The HDCO lines are broader than the maximum allowed line width, 3.5\kms, making the fitting inaccurate.
+  % \item The HDCO lines are broader than the maximum allowed line width, 3.5\kms, making the fitting inaccurate.
 \end{itemize}
 
-\paragraph{Per-emb-37}
-\begin{itemize}
-  \item The fitting of SO lines has a strong variation as a function of temperatures.
-\end{itemize}
+% \paragraph{Per-emb-37}
+% \begin{itemize}
+%   \item The fitting of SO lines has a strong variation as a function of temperatures.
+% \end{itemize}
 
-\paragraph{Per-emb-36}
-\begin{itemize}
-  \item The SO lines are underestimated by the best-fitting model.  Perhaps it can be fixed by changing the \texttt{Variation} parameter.  To be tested.  Test run on laptop shows no issue of having a good fit at 100 K for SO with \texttt{Variatopn} $= 10^{-2}$.
-  \item The CCH lines only show at the blue-shifted velocities.
-\end{itemize}
+% \paragraph{Per-emb-36}
+% \begin{itemize}
+%   \item The SO lines are underestimated by the best-fitting model.  Perhaps it can be fixed by changing the \texttt{Variation} parameter.  To be tested.  Test run on laptop shows no issue of having a good fit at 100 K for SO with \texttt{Variation} $= 10^{-2}$.
+%   \item The CCH lines only show at the blue-shifted velocities.
+% \end{itemize}
 
 \paragraph{B1-bS}
 \begin{itemize}
@@ -560,10 +502,10 @@ Figure\,\ref{fig:corner} shows the correlations of several COMs selected from th
   \item Only two \methanol\ lines are covered.  Both lines have a strength of $\sim$10 K, suggesting optically thick.
 \end{itemize}
 
-\paragraph{Per-emb-5}
-\begin{itemize}
-  \item The CCH fitting is not robust across different temperatures (only 150 K and 300 K fit).
-\end{itemize}
+% \paragraph{Per-emb-5}
+% \begin{itemize}
+%   \item The CCH fitting is not robust across different temperatures (only 150 K and 300 K fit).
+% \end{itemize}
 
 
 \subsection{Comparison to the CALYPSO Survey}
@@ -618,6 +560,16 @@ Y.-L. Yang acknowledges the supports the JSPS Postdoctoral Fellowship from Japan
 \appendix
 \section{Catalogs for Molecular Data}
 \label{sec:catalogs}
+
+\section{The Spectra of CCH}
+The CCH spectra toward the continuum emission have irregular line profiles.  Some spectra have strong self-absorption, while some spectra only show the blue-shifted emission.  Due to the absorption and irregular line profile, the \textsc{xclass} fitting routine often fails to faithfully reproduce the observed CCH spectra.  CCH can easily form in the outflow cavity wall due to the abundant CH$_{4}$ sublimated from dust grains as well as C$^+$ ionized by the UV radiation.  Thus, the CCH spectra can have broad line width and multiple components.  Furthermore, the morphology of the CCH emission traces the outflows, making our extraction from the continuum emission non-ideal for representing the nature of the CCH emission.  Figure\,\ref{fig:all_cch} and Y show the spectra and the moment 0 map of CCH, respectively.
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=\textwidth]{all_cch.pdf}
+  \caption{The CCH spectra of all PEACHES sources extracted from the continuum emission.}
+  \label{fig:all_cch}
+\end{figure*}
 
 \bibliography{research,fixed}
 
