--- a/sources.tex
+++ b/sources.tex
@@ -26,7 +26,7 @@
     Per-emb 36     & NGC 1333 IRAS 2B & 03:28:57.37    & 31:14:15.77    & 6.9 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{73}$\times$0\farcs{46} & 5.56   & S19   \\
     Per-emb 54     & NGC 1333 IRAS 6 & 03:29:01.55    & 31:20:20.49    & 7.9 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{69}$\times$0\farcs{40} & 0.07   & S19   \\
     SVS 13B        & NGC 1333 SVS 13B & 03:29:03.08    & 31:15:51.73    & 8.5 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{87}$\times$0\farcs{68} & 6.64   & S19   \\
-    SVS 13A2       &                & 03:29:03.39    & 31:16:01.58    & 8.4 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{86}$\times$0\farcs{53} & 0.61   & S18   \\
+    SVS 13A2       & VLA 3          & 03:29:03.39    & 31:16:01.58    & 8.4 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{86}$\times$0\farcs{53} & 0.61   & S18   \\
     Per-emb 44     & NGC 1333 SVS 13A & 03:29:03.76    & 31:16:03.70    & 8.7 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{98}$\times$0\farcs{79} & 6.84   & S19   \\
     Per-emb 15     &                & 03:29:04.06    & 31:14:46.23    & 6.8 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{89}$\times$0\farcs{70} & 0.17   & S19   \\
     Per-emb 50     & IRAS 03260$+$3111 A & 03:29:07.77    & 31:21:57.11    & 9.3 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{73}$\times$0\farcs{44} & 4.13   & Y20   \\
