--- a/sources_internal.tex
+++ b/sources_internal.tex
@@ -20,7 +20,7 @@
     Set1\_ID07     & Per-emb 20     & L1455 IRS 4    & 03:27:43.28    & 30:12:28.88    & 5.3 & 0\farcs{64}$\times$0\farcs{40} & 1\farcs{29}$\times$0\farcs{78} & 0.14   & S19   \\
     Set1\_ID08     & L1455 IRS 2    &                & 03:27:47.69    & 30:12:04.33    & 5.1 & 0\farcs{64}$\times$0\farcs{40} & 0\farcs{60}$\times$0\farcs{38} & 0.13   & H18   \\
     Set2\_ID00     & Per-emb 44     & NGC 1333 SVS 13A & 03:29:03.76    & 31:16:03.70    & 8.7 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{98}$\times$0\farcs{79} & 6.84   & S19   \\
-    Set2\_ID00\_2  & SVS 13A2       &                & 03:29:03.39    & 31:16:01.58    & 8.4 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{86}$\times$0\farcs{53} & 0.61   & S18   \\
+    Set2\_ID00\_2  & SVS 13A2       & VLA 3          & 03:29:03.39    & 31:16:01.58    & 8.4 & 0\farcs{66}$\times$0\farcs{42} & 0\farcs{86}$\times$0\farcs{53} & 0.61   & S18   \\
     Set2\_ID01     & Per-emb 12 A   & NGC 1333 IRAS 4A1 & 03:29:10.54    & 31:13:30.93    & 6.9 & 0\farcs{66}$\times$0\farcs{42} & 1\farcs{11}$\times$0\farcs{98} & 21.85  & S19   \\
     Set2\_ID01\_2  & Per-emb 12 B   & NGC 1333 IRAS 4A2 & 03:29:10.44    & 31:13:32.08    & 6.9 & 0\farcs{66}$\times$0\farcs{42} & 1\farcs{33}$\times$0\farcs{81} & 10.04  & S19   \\
     Set2\_ID02     & Per-emb 13     & NGC 1333 IRAS 4B1 & 03:29:12.02    & 31:13:07.99    & 7.1 & 0\farcs{66}$\times$0\farcs{42} & 1\farcs{07}$\times$0\farcs{83} & 14.76  & S19   \\
