--- a/peaches.tex
+++ b/peaches.tex
@@ -507,7 +507,36 @@ The PEACHES spectra cover four methanol lines, while the spectra of each source 
 %   \item The CCH fitting is not robust across different temperatures (only 150 K and 300 K fit).
 % \end{itemize}
 
+\subsection{Chemical Diversity in PEACHES}
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{ratio_ch3cn_ch3oh_lbol.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3ocho_ch3oh_lbol.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3och3_ch3oh_lbol.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3och3_ch3ocho_lbol.pdf}
+  \caption{Ratios of molecules as a function of \lbol.}
+  \label{fig:ratio_lbol}
+\end{figure*}
 
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{ratio_ch3cn_ch3oh_tbol.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3ocho_ch3oh_tbol.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3och3_ch3oh_tbol.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3och3_ch3ocho_tbol.pdf}
+  \caption{Ratios of molecules as a function of \tbol.}
+  \label{fig:ratio_tbol}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{ratio_ch3cn_ch3oh_tcont.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3ocho_ch3oh_tcont.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3och3_ch3oh_tcont.pdf}
+  \includegraphics[width=0.47\textwidth]{ratio_ch3och3_ch3ocho_tcont.pdf}
+  \caption{Ratios of molecules as a function of $T_\text{cont}$.}
+  \label{fig:ratio_tcont}
+\end{figure*}
 \subsection{Comparison to the CALYPSO Survey}
 \subsection{Complex Chemistry throughout Star Formation}
 
