add stats with Tcont

--- a/peaches.tex
+++ b/peaches.tex
@@ -222,11 +222,17 @@ Several sources have their SiO emission with a broad line width, significantly c
   \includegraphics[width=\textwidth]{stats_sorted_by_tbol.pdf}
   \caption{The same figure as Figure\,\ref{fig:stats} but sorted by their bolometric temperature.}
 \end{figure*}
-\addtocounter{figure}{-1}
 
+\addtocounter{figure}{-1}
 \begin{figure*}[htbp!]
   \includegraphics[width=\textwidth]{stats_sorted_by_Mcont.pdf}
   \caption{The same figure as Figure\,\ref{fig:stats} but sorted by their mass derived from their 9\,mm observations \citep{2018ApJS..238...19T}.}
+\end{figure*}
+
+\addtocounter{figure}{-1}
+\begin{figure*}[htbp!]
+  \includegraphics[width=\textwidth]{stats_sorted_by_Tcont.pdf}
+  \caption{The same figure as Figure\,\ref{fig:stats} but sorted by the continuum temperatures listed in Table\,\ref{tbl:source_list}.}
 \end{figure*}
 \renewcommand{\thefigure}{\arabic{figure}}
 
